Step 1: Install libraries
1. react-native-vision-camera: For Camera
2. react-native-worklets-core: For enabling Frame Processors
3. react-native-vision-camera-face-detector: For detecting faces in a Frame Processor
4. react-native-skia: For the Skia Frame Processors integration
5. react-native-reanimated: For the Skia Frame Processors integration

--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "^1.2.3",
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-vision-camera": "^4.0.1",
+    "react-native-vision-camera-face-detector": "^1.5.0",
+    "react-native-worklets-core": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
